tests/NormalTests/paczka1/fuzzy1/90710680.err
Error in line 5: gYn6IbN42k9 S756 89,7
Error in line 15: gYn6IbN42k9ÌA726Ì321,3
Error in line 26: I2AzO S756 280,30
Error in line 24: I2AzO S756 94,6
Error in line 27: Ce29YNC A879 110,1
